@@ -1,3 +1,8 @@
+2007-02-19  Soren Sandmann <sandmann@redhat.com>
+
+	* autogen.sh: Copy this from somewhere else since that makes it
+	work on my system.
+
 2006-12-15  Pema Geyleg  <pgeyleg@gmail.com>
 
 	* configure.in: Added 'dz' to ALL_LINGUAS
